# OxyEngine

./: CMakeLists.txt  README.md
Engine/Resources/: glew32.lib  glfw3.lib
Game/Header/: C_OxyEngine.hpp
Game/Header/Rendering/: I_RenderingEngine.hpp
Game/Header/Rendering/Rasterization/: C_RasterizationEngine.hpp
Game/Header/Rendering/Renderer/: I_Renderer.hpp  I_Window.hpp
Game/Header/Rendering/Renderer/OpenGL33/: C_OpenGL33Renderer.hpp  C_OpenGL33Window.hpp
Game/Source/: CMakeLists.txt  C_OxyEngine.cpp  Main.cpp
Game/Source/Rendering/: I_RenderingEngine.cpp
Game/Source/Rendering/Rasterization/: C_RasterizationEngine.cpp
Game/Source/Rendering/Renderer/: I_Renderer.cpp  I_Window.cpp
Game/Source/Rendering/Renderer/OpenGL33/: C_OpenGL33Renderer.cpp  C_OpenGL33Window.cpp
